jsPsych.plugins.parameterType.COMPLEX is used.

--- a/demos/rectangles.html
+++ b/demos/rectangles.html
@@ -17,8 +17,10 @@
         height: 50,
         line_color: 'black', // You can use the HTML color name instead of the HEX color.
         show_start_time: 500, // ms after the start of the trial
-        endX: 400,
-        endY: 400,
+        // endX: 400,
+        // endY: 400,
+        endX: 'center',
+        endY: 'center',
         motion_start_time: 1500,
         motion_end_time: 3000,
     }
