--- a/demos/twoSoundsWithSOA.html
+++ b/demos/twoSoundsWithSOA.html
@@ -11,7 +11,7 @@
     // This file demonstrates how to present sounds with 1000-ms SOA.
     // This demo must be uploaded in a web-server to run.
 
-    sounds = [ // All the images used in this demo
+    sounds = [ // All the sound files used in this demo
         './sound/tone100ms.wav'
     ];
 
