closePath is added.

--- a/demos/manual-drawFunc.html
+++ b/demos/manual-drawFunc.html
@@ -28,6 +28,7 @@
             context.fillStyle = grad;
             context.rect(stimulus.currentX, stimulus.currentY, gradLength, gradLength);
             context.fill();
+            context.closePath();
         }
     }
     
