line_width is added at the rectangles.html

--- a/demos/rectangles.html
+++ b/demos/rectangles.html
@@ -16,6 +16,7 @@
         width: 200,
         height: 50,
         line_color: 'black', // You can use the HTML color name instead of the HEX color.
+        line_width: 3,
         show_start_time: 500, // ms after the start of the trial
         // endX: 400,
         // endY: 400,
