--- a/demos/randomizedImages.html
+++ b/demos/randomizedImages.html
@@ -24,6 +24,7 @@
                     {
                         obj_type: 'cross', // fixation
                         line_length: 20, // pixels
+                        line_width: 4
                     },
                     {
                         obj_type: 'image',
