add explanations about demos

--- a/demos/lines.html
+++ b/demos/lines.html
@@ -9,7 +9,7 @@
 <script>
     // This file demonstrates how to present lines.
     // There are two ways to define a line.
-    // Note: You can not specify the angle and positions at the same time.
+    // Note: You can not specify both the angle and positions for the same object.
     
     // The line_object1 defines a line using the angle and line_length.
     var line_object1 = {
