--- a/demos/twoSoundsWithSOA.html
+++ b/demos/twoSoundsWithSOA.html
@@ -9,7 +9,7 @@
 <body></body>
 <script>
     // This file demonstrates how to present sounds with 1000-ms SOA.
-    // This demo must be uploaded in a web-server to run.
+    // Note that the experimental files (html, js, and audio) must be uploaded in a web-server to run.
 
     sounds = [ // All the sound files used in this demo
         './sound/tone100ms.wav'
