--- a/demos/movingCircles.html
+++ b/demos/movingCircles.html
@@ -9,9 +9,9 @@
 <script>
     // This file demonstrates how to present moving circles.
     // There are three ways to define motion.
-    // Note: You can not specify the speed, location, and time at the same time.
+    // Note: You can not specify the speed, distance, and time at the same time.
     
-    // The circle_object1 defines motion using the location and time.
+    // The circle_object1 defines motion using the distance and time.
     var circle_object1 = {
         obj_type: 'circle',
         startX: 200, // location in the canvas
@@ -26,7 +26,8 @@
         motion_end_time: 4000,
     }
 
-    // The circle_object2 defines motion using the location and speed.
+    // The circle_object2 defines motion using the distance and speed.
+    // This blue circle moves from right to left (600-200=400 pixel) at 80 pixel/sec, so it takes 5 seconds.
     var circle_object2 = {
         obj_type: 'circle',
         startX: 600, // location in the canvas
@@ -36,8 +37,8 @@
         radius: 50,
         line_color: 'blue', // You can use the HTML color name instead of the HEX color.
         fill_color: 'blue',
-        horiz_pix_frame: -3, // The circle moves from right to left.
-        vert_pix_frame: 0,
+        horiz_pix_sec: -80, // The circle moves from right to left.
+        vert_pix_sec: 0,
         show_start_time: 500, // ms after the start of the trial
         motion_start_time: 1000,
     }
@@ -50,11 +51,11 @@
         radius: 50,
         line_color: 'red', // You can use the HTML color name instead of the HEX color.
         fill_color: 'red',
-        horiz_pix_frame: -3, // The circle moves from right to left.
-        vert_pix_frame: 2,
+        horiz_pix_sec: -80, // The circle moves from right to left.
+        vert_pix_sec: 60,
         show_start_time: 500, // ms after the start of the trial
         motion_start_time: 1000,
-        motion_end_time: 4000,
+        motion_end_time: 6000,
     }
 
     var trial = {
