--- a/demos/draw_two_images_repeatedly.html
+++ b/demos/draw_two_images_repeatedly.html
@@ -38,9 +38,9 @@
                 prompt: 'Press any key to proceed.',
                 stepFunc: function(trial, canvas, context, elapsedTime){
                     const first_image_onset = 0; // ms
-                    const second_image_onset = 1000; // ms
                     const display_duration = 500; // ms
                     const isi = 500; // ms
+                    const second_image_onset = first_image_onset + display_duration + isi; // ms
                     const period = (display_duration + isi) * 2; // 2 images
 
                     const time_from_first_image_onset = elapsedTime % period;
