--- a/demos/keyboard_event.html
+++ b/demos/keyboard_event.html
@@ -37,7 +37,7 @@
               if (current_color < 0) current_color = 0;
             }
             
-            jsPsych.currentTrial().stimuli[0].fill_color = `rgb(${current_color}, ${current_color}, ${current_color})`;
+            jsPsych.currentTrial().stim_array[0].fill_color = `rgb(${current_color}, ${current_color}, ${current_color})`;
           },
       }
 
