--- a/demos/stepFunc.html
+++ b/demos/stepFunc.html
@@ -12,17 +12,17 @@
     var rotation = {
         type: 'psychophysics',
         // Note: The properties which depend on objects like show_start_time can not be written here.
-        stepFunc: function(trial, canvas, context, elapsedTime){
+        raf_func: function(trial, elapsedTime){
             const velocity = 45/180 * Math.PI; // radians per sec
             const theta = velocity * elapsedTime/1000;
             const radius = 100;
 
-            context.beginPath();
-            context.arc(
-                canvas.width/2 + radius * Math.cos(theta), 
-                canvas.height/2 + radius * Math.sin(theta), 
+            trial.context.beginPath();
+            trial.context.arc(
+                trial.centerX + radius * Math.cos(theta), 
+                trial.centerY + radius * Math.sin(theta), 
                 radius, 0, Math.PI*2, false);
-            context.fill();
+            trial.context.fill();
         }
     }
     
