--- a/demos/play_webaudio_sound_by_key.html
+++ b/demos/play_webaudio_sound_by_key.html
@@ -9,6 +9,7 @@
     <body></body>
     <script>
         // This file demonstrates how to play the sound by pressing a key.
+        // It is more accurate to use the webaudio, but the code becomes a bit more complex
 
         const sounds = [ // All the sound files used in this demo
             './sound/tone100ms.wav',
@@ -24,24 +25,51 @@
             obj_type: 'sound',
             file: sounds[1]
         }
+
+        const rect = {
+            obj_type: 'rect',
+            width: 100,
+            height: 50,
+            line_color: 'red'
+        }
     
         const trial = {
             type: 'psychophysics',
-            stimuli: [sound1, sound2], // These can be referenced using the jsPsych.currentTrial().stim_array.
+            stimuli: [sound1, sound2, rect], // These can be referenced using the jsPsych.currentTrial().stim_array.
+            canvas_height: 500,
             prompt: '<p>Pressing the F or J key to play the sound.</p>',
             response_type: 'key',
             choices: ['space'],
             key_down_func: function(event){ 
                 if (event.key === 'f'){
-                    jsPsych.currentTrial().stim_array[0].play()
+                    const sound_data = jsPsych.currentTrial().stim_array[0];
+                    if (sound_data.is_presented){
+                        reset_sound(sound_data)
+                    }
+                    sound_data.play()
+                    sound_data.is_presented = true;
                 }
                 if (event.key === 'j'){
-                    jsPsych.currentTrial().stim_array[1].play()
+                    const sound_data = jsPsych.currentTrial().stim_array[1];
+                    if (sound_data.is_presented){
+                        reset_sound(sound_data)
+                    }
+                    sound_data.play()
+                    sound_data.is_presented = true;                
                 }
+                
             },
-            raf_func: function(){ // You have to write the raf_func to prevent playing the sound automatically.
+            raf_func: function(){ // You have to write the empty raf_func to prevent playing the sound automatically.
 
             }
+        }
+
+        function reset_sound(sound_data){
+            sound_data.source.stop();
+            sound_data.source.disconnect(sound_data.context.destination);
+            sound_data.source = sound_data.context.createBufferSource();
+            sound_data.source.buffer = jsPsych.pluginAPI.getAudioBuffer(sound_data.file);
+            sound_data.source.connect(sound_data.context.destination);
         }
 
         // See also jspsych-audio-keyboard-response.html
@@ -55,8 +83,8 @@
 
         jsPsych.init({
             timeline: [pre_audio, trial],
-            use_webaudio: false, // required for this demo to run properly.
-            preload_audio: sounds, // The sound data should be preloaded.
+            use_webaudio: true, // This must be true (default) for this demo to run properly.
+            preload_audio: sounds, // The audio data should be preloaded.
             on_finish: function(){jsPsych.data.displayData();}
         });
   </script>
