added the explanations of demo programs.

--- a/demos/play_webaudio_sound_by_key.html
+++ b/demos/play_webaudio_sound_by_key.html
@@ -9,7 +9,8 @@
     <body></body>
     <script>
         // This file demonstrates how to play the sound by pressing a key.
-        // It is more accurate to use the webaudio, but the code becomes a bit more complex
+        // The Web Audio API should be used for time-accurate presentation, 
+        // but the code would be a bit more complex compared with the play_html5_sound_by_key.html.
 
         const sounds = [ // All the sound files used in this demo
             './sound/tone100ms.wav',
