updated to the jsPsych v6.2.0

--- a/demos/response_start_time_depends_on_onsets.html
+++ b/demos/response_start_time_depends_on_onsets.html
@@ -39,7 +39,7 @@
                     }
                 ],
                 canvas_height: 500,
-                prompt: 'Press any key to respond.',
+                prompt: 'The image stimulus will be presented after one to three seconds. <br>Press any key to respond.',
                 data: {
                     'image_name': jsPsych.timelineVariable('stim'),
                     'start_time': jsPsych.timelineVariable('start_time')
