--- a/demos/elapsed_time_frame.html
+++ b/demos/elapsed_time_frame.html
@@ -11,6 +11,7 @@
 
     var rotation = {
         type: 'psychophysics',
+        stimuli: [], // This is needed.
         // Note: The properties which depend on objects like show_start_time can not be written here.
         raf_func: function(trial, elapsedTime, elapsedFrame){
             const context = trial.context;
