--- a/demos/raf_func.html
+++ b/demos/raf_func.html
@@ -11,6 +11,7 @@
 
     var rotation = {
         type: 'psychophysics',
+        stimuli: [], // This is needed.
         // Note: The properties which depend on objects like show_start_time can not be written here.
         raf_func: function(trial, elapsedTime){
             const velocity = 45/180 * Math.PI; // radians per sec
