--- a/demos/draw-gabor.html
+++ b/demos/draw-gabor.html
@@ -16,8 +16,8 @@
         tilt: 50,
         sf: 20,
         phase: 30,
-        // phase2: 30,
-        phase2: 0
+        phase2: 10,
+        // phase2: 0
     }
 
     const trial = {
