--- a/demos/draw-multi-gabor.html
+++ b/demos/draw-multi-gabor.html
@@ -38,6 +38,14 @@
         stimuli: [gabor1, gabor2],
         // canvas_height: 500,
         prompt: 'Press any key to proceed.',
+        // on_start: function(trial){
+        on_finish: function(){
+            // console.log(jsPsych.currentTrial().context)
+            // console.log(trial)
+            // console.log(trial.context)
+            a = jsPsych.currentTrial().context.getImageData(200, 300, 10, 10)
+            console.log(a)
+        }
     }
 
     jsPsych.init({
