Changed the explanation of randomize_show_start_time.html

--- a/demos/randomize_show_start_time.html
+++ b/demos/randomize_show_start_time.html
@@ -8,6 +8,8 @@
 <body></body>
 <script>
     // This file demonstrates how to randomize the show_start_time of a image stimulus.
+    // The stimulus image is presented from 500 to 3000ms after the fixation point.
+
 
     const images = [ // All the images used in this demo
         './img/scissors.png',
