cnt++のバグ修正

--- a/demos/draw-gabor-math.html
+++ b/demos/draw-gabor-math.html
@@ -14,12 +14,13 @@
 
     const gabor_stim = {
         obj_type: 'gabor',
-        tilt: 50,
-        sf: 0.03,
-        phase: 10,
-        width: 400,
-        sc: 20,
-        contrast: 100,
+        tilt: 30,
+        sf: 0.05,
+        // phase: 10,
+        phase: 0,
+        width: 323,
+        sc: 50,
+        contrast: 50,
         // phase2: 10,
         phase2: 0
     }
