--- a/demos/draw-gabor-math.html
+++ b/demos/draw-gabor-math.html
@@ -17,12 +17,14 @@
         tilt: 30,
         sf: 0.05,
         // phase: 10,
-        phase: 0,
+        phase: 90,
         width: 323,
-        sc: 50,
-        contrast: 50,
+        sc: 20,
+        contrast: 20,
         // phase2: 10,
-        phase2: 0
+        phase2: 0,
+        startX: 100,
+        startY:100,
     }
 
     const trial = {
