--- a/demos/draw-gabor-math.html
+++ b/demos/draw-gabor-math.html
@@ -14,17 +14,20 @@
 
     const gabor_stim = {
         obj_type: 'gabor',
-        tilt: 30,
+        tilt: 50,
         sf: 0.05,
         // phase: 10,
         phase: 90,
-        width: 323,
+        width: 400,
         sc: 20,
         contrast: 20,
         // phase2: 10,
+        drift: 0,
         phase2: 0,
-        startX: 100,
-        startY:100,
+        // method: 'math',
+        method: 'gaborgen',
+        // startX: 100,
+        // startY:100,
     }
 
     const trial = {
