Add the explanation of demo

--- a/demos/draw-gabor-patches.html
+++ b/demos/draw-gabor-patches.html
@@ -44,10 +44,11 @@
         phase: 90,
         width: 300,
         sc: 20,
-        contrast: 5,
+        contrast: 20,
         startX: 100,
         startY:500,
-        method: 'math'
+        method: 'math',
+        show_start_time: 500,
     }
 
     const gabor4 = {
@@ -60,6 +61,9 @@
         contrast: 50,
         startX: 500,
         startY:500,
+        show_start_time: 1000,
+        motion_start_time: 1000,
+        horiz_pix_frame: 5,
     }
 
     const trial = {
