--- a/demos/drifting-gabor.html
+++ b/demos/drifting-gabor.html
@@ -10,7 +10,7 @@
 </head>
 <body></body>
 <script>
-    // This file demonstrates how to present a gabor patch.
+    // This file demonstrates how to present a drifting gabor patch.
 
     const gabor1 = {
         obj_type: 'gabor',
