--- a/demos/localize-circle.html
+++ b/demos/localize-circle.html
@@ -20,7 +20,7 @@
     var instruction = {
         type: 'psychophysics',
         stimuli: [text_object],
-        choices: ['space'],
+        choices: [' '],
     }
     
     var trial = {
