--- a/demos/play_html5_sound_by_key.html
+++ b/demos/play_html5_sound_by_key.html
@@ -3,17 +3,25 @@
     <head>
       <script src="../jspsych.js"></script>
       <script src="../jspsych-psychophysics.js"></script>
+      <script src="../jspsych-preload.js"></script>
       <script src="../jspsych-html-button-response.js"></script>
       <link href="../css/jspsych.css" rel="stylesheet" type="text/css"></link>
     </head>
     <body></body>
     <script>
-        // This file demonstrates how to play the sound by pressing a key.
+        // This file demonstrates how to play the HTML5 sound by pressing a key.
 
         const sounds = [ // All the sound files used in this demo
             './sound/tone100ms.wav',
             './sound/880Hz_100ms.wav'
         ];
+
+        // Preloading files are needed to present the stimuli accurately.
+        const preload = {
+            type: 'preload',
+            audio: sounds,
+        }
+
 
         const sound1 = {
             obj_type: 'sound',
@@ -31,7 +39,7 @@
             prompt: '<p>Pressing the F or J key to play the sound.</p>',
             canvas_height: 500,
             response_type: 'key',
-            choices: ['space'],
+            choices: [' '],
             key_down_func: function(event){ 
                 if (event.key === 'f'){
                     jsPsych.currentTrial().stim_array[0].play()
@@ -55,9 +63,8 @@
         }
 
         jsPsych.init({
-            timeline: [pre_audio, trial],
+            timeline: [preload, pre_audio, trial],
             use_webaudio: false, // required for this demo to run properly.
-            preload_audio: sounds, // The sound data should be preloaded.
             on_finish: function(){jsPsych.data.displayData();}
         });
   </script>
