--- a/demos/play_webaudio_sound_by_key.html
+++ b/demos/play_webaudio_sound_by_key.html
@@ -8,6 +8,9 @@
     </head>
     <body></body>
     <script>
+        // CAUTION: This program will not work with jsPsych 6.3.0 and above.
+        // Please use the play_html5_sound_by_key.html instead.
+        //
         // This file demonstrates how to play the sound by pressing a key.
         // The Web Audio API should be used for time-accurate presentation, 
         // but the code would be a bit more complex compared with the play_html5_sound_by_key.html.
