--- a/demos/draw_part_of_image.html
+++ b/demos/draw_part_of_image.html
@@ -3,15 +3,25 @@
 <head>
   <script src="../jspsych.js"></script>
   <script src="../jspsych-psychophysics.js"></script>
+  <script src="../jspsych-preload.js"></script>
   <link rel="stylesheet" href="../css/jspsych.css"></link>
 </head>
 <body></body>
 <script>
     // This file demonstrates how to use the drawFunc.
 
+    const img_file_name = './img/tape.png'
+
+    // Preloading files are needed to present the stimuli accurately.
+    const preload = {
+        type: 'preload',
+        images: [img_file_name],
+    }
+
+
     var part_of_image = {
         obj_type: 'image',
-        file: './img/tape.png',
+        file: img_file_name,
         horiz_pix_sec: 30,
         show_start_time: 500,
         motion_start_time: 1000,
@@ -28,7 +38,7 @@
     }
 
     jsPsych.init({
-        timeline: [trial],
+        timeline: [preload, trial],
         on_finish: function(){jsPsych.data.displayData();}
     });
 </script>
