--- a/demos/mask_filter.html
+++ b/demos/mask_filter.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <script src="../jspsych.js"></script>
-  <script src="../jspsych-preload.js"></script>
+  <script src="../js/jspsych.js"></script>
+  <script src="../js/jspsych-preload.js"></script>
   <script src="../jspsych-psychophysics.js"></script>
-  <script src="../numeric.min.js"></script>
-  <script src="../math.js"></script>
+  <script src="../js/numeric.min.js"></script>
+  <script src="../js/math.js"></script>
   <link rel="stylesheet" href="../css/jspsych.css"></link>
 </head>
 <body></body>
