--- a/demos/mouse_event.html
+++ b/demos/mouse_event.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-      <script src="../jspsych.js"></script>
+      <script src="../js/jspsych.js"></script>
       <script src="../jspsych-psychophysics.js"></script>
       <link href="../css/jspsych.css" rel="stylesheet" type="text/css"></link>
     </head>
