--- a/demos/response_start_time_depends_on_onsets.html
+++ b/demos/response_start_time_depends_on_onsets.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <script src="../jspsych.js"></script>
+  <script src="../js/jspsych.js"></script>
   <script src="../jspsych-psychophysics.js"></script>
-  <script src="../jspsych-html-button-response.js"></script>
-  <script src="../jspsych-preload.js"></script>
+  <script src="../js/jspsych-html-button-response.js"></script>
+  <script src="../js/jspsych-preload.js"></script>
   <link rel="stylesheet" href="../css/jspsych.css"></link>
 </head>
 <body></body>
