--- a/demos/tutorial.html
+++ b/demos/tutorial.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <script src="../jspsych.js"></script>
+  <script src="../js/jspsych.js"></script>
   <script src="../jspsych-psychophysics.js"></script>
   <link rel="stylesheet" href="../css/jspsych.css"></link>
 </head>
