--- a/demos/twoImagesWithSOA.html
+++ b/demos/twoImagesWithSOA.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <script src="../jspsych.js"></script>
+  <script src="../js/jspsych.js"></script>
   <script src="../jspsych-psychophysics.js"></script>
-  <script src="../jspsych-preload.js"></script>
+  <script src="../js/jspsych-preload.js"></script>
   <link rel="stylesheet" href="../css/jspsych.css"></link>
 </head>
 <body></body>
