--- a/demos/retina_display.html
+++ b/demos/retina_display.html
@@ -8,6 +8,7 @@
 <body></body>
 <script>
     // This demo confirms that the stimuli are presented properly on retina display.
+    // The canvas size is set to 600x600
 
     var text_object1 = {
         obj_type: 'text',
