Set the use_webaudio as false

--- a/psychophysics-demos/play_html5_sound_by_key.html
+++ b/psychophysics-demos/play_html5_sound_by_key.html
@@ -12,6 +12,7 @@
         // This file demonstrates how to play the HTML5 sound by pressing a key.
 
         const jsPsych = initJsPsych({
+            use_webaudio: false, // required for this demo to run properly.
             on_finish: function() {
                 jsPsych.data.displayData();
             }
